tests/machine/x/python/dataset_where_filter.py
# Generated by Mochi Python compiler
from __future__ import annotations
import dataclasses
import typing


@dataclasses.dataclass
class Person:
    name: str
    age: int

    def __getitem__(self, key):
        return getattr(self, key)

    def __repr__(self):
        return str(self.__dict__)


people: list[Person] = [
    Person(name="Alice", age=30),
    Person(name="Bob", age=15),
    Person(name="Charlie", age=65),
    Person(name="Diana", age=45),
]
adults: list[dict[str, typing.Any]] = [
    {"name": person["name"], "age": person["age"], "is_senior": person["age"] >= 60}
    for person in people
    if person["age"] >= 18
]
print("--- Adults ---")
for person in adults:
    print(
        person["name"], "is", person["age"], " (senior)" if person["is_senior"] else ""
    )
